--- a/festival.html
+++ b/festival.html
@@ -29,13 +29,13 @@
                 <li class="fade-in-up"><a class="link" href="jericoacoara.html">Jericoacoara</a></li>
             </ul>
 
-            <div class="audio-player">
+            <!-- <div class="audio-player">
                 <button id="play-pause-btn">&#10074;&#10074;</button>
                 <audio id="audio-player">
                     <source src="DÉO RIAN E REGIONAL IMPERIAL - 8ª EDIÇÃO FESTIVAL CHORO JAZZ.mp3" type="audio/mp3">
                     Seu navegador não suporta o elemento de áudio.
                 </audio>
-            </div>
+            </div> -->
         </nav>
     </header>
     <main>
