--- a/para.html
+++ b/para.html
@@ -40,35 +40,35 @@
     </header>
     <main>
 
-        <section class="artistas">
+        <section class="artistas fade-in-up">
 
-            <img class="artImg" src="assets/artistas.png" alt="">
+            <img class="artImg fade-in-up" src="assets/artistas.png" alt="">
 
             <div id="card-container" class="card-container">
                 <!-- Aqui serão gerados dinamicamente os cards -->
             </div>
         </section>
 
-        <section class="homenageados-para">
-            <img class="artImg2" src="public/images/homenageados-para.png" alt="">
+        <section class="homenageados-para fade-in-up">
+            <img class="artImg2 fade-in-up" src="public/images/homenageados-para.png" alt="">
             <div id="card-container3" class="card-container3">
                 <!-- Aqui serão gerados dinamicamente os cards -->
             </div>
         </section>
 
 
-        <section class="homenageados-rio">
+        <section class="homenageados-rio fade-in-up">
             <img class="artImg2" src="public/images/homenageados-rio.png" alt="">
             <div id="card-container4" class="card-container4">
                 <!-- Aqui serão gerados dinamicamente os cards -->
             </div>
         </section>
 
-        <section class="container">
+        <section class="container fade-in-up">
 
-            <img src="public/images/maisinformacoes.png" alt="Imagem Descritiva" class="image">
+            <img src="public/images/maisinformacoes.png" alt="Imagem Descritiva" class="image fade-in-up">
 
-            <a class="navLink" href="assets/pdf/Release-final.pdf" target="_blank">
+            <a class="navLink fade-in-up" href="assets/pdf/Release-final.pdf" target="_blank">
                 <img src="public/images/realeseinfor.png" alt="imagem com nome release">
             </a>
 
