regua de logos e programação

--- a/para.html
+++ b/para.html
@@ -103,9 +103,9 @@
                     <a target="_blank" href="https://www.instagram.com/governopara/">
                         <img src="assets/regua_de_logos/mirante.png" alt="Logo Instituto Mirante" class="regua_logo">
                     </a>
-                    <a target="_blank" href="https://www.fcp.pa.gov.br/">
+                    <!-- <a target="_blank" href="https://www.fcp.pa.gov.br/">
                         <img src="assets/regua_de_logos/cultura.png" alt="Logo Secretaria de Cultura CE" class="regua_logo">
-                    </a>
+                    </a> -->
                     <a target="_blank" href="https://www.fcp.pa.gov.br/">
                         <img src="assets/regua_de_logos/governo.png" alt="Logo Gov CE" class="regua_logo">
                     </a>
